openmediavault (6.0.41-1) stable; urgency=low

  * Set Postfix mailbox size limit to unlimited by default.
    This can be customized via the OMV_POSTFIX_MAIN_MAILBOX_SIZE_LIMIT
    environment variable.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 19 Sep 2022 00:16:12 +0200

openmediavault (6.0.40-2) stable; urgency=low

  * Update locale files.
  * Reduce final UI bundle size by 75%.
  * Issue #1386: Add switch to turn on/off dark mode.
  * Add the 'Uptime' Dashboard widget.
  * Do not use Salt grains for hostname/domain when deploying
    the Postfix configuration. This increases the deployment time
    dramatically.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 10 Sep 2022 10:57:41 +0200

openmediavault (6.0.39-1) stable; urgency=low

  * Update locale files.
  * Various improvements, e.g. code refactoring of the
    Dashboard widgets.
  * Fix error when accessing the FTP service stats page.
  * Relocate FTP welcome message into the /etc/proftpd directory.
  * Add new Dashboard widget type to display simple values.
    The 'System time' and 'System updates' widget have been
    added as examples.
  * Issue #1384: Incorrect disk usage warning is displayed for
    BTRFS file systems.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 31 Aug 2022 22:17:25 +0200

openmediavault (6.0.38-1) stable; urgency=low

  * Packages that are changing dependencies are now installed
    when pressing the 'Install packages' button in the
    'System | Update Management | Updates' page. This should
    prevent confusion why packages are kept back in the UI
    but installed via the CLI command 'omv-upgrade'.
  * Issue #1381: Fixed an error when changing a user that does
    not yet exist in the database.
  * Issue #1383: Fix proftpd issue when ban rules are activated.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 29 Aug 2022 16:09:06 +0200

openmediavault (6.0.37-1) stable; urgency=low

  * Various UI improvements.