@@ -1,13 +1,13 @@
 {{ pillar['headers']['multiline'] }}
 {%- if config.http.enable | to_bool and config.http.host | length > 0 %}
-export http_proxy="http://{% if config.http.username | length > 0 %}{{ config.http.username }}:{{ config.http.password }}@{% endif %}{{ config.http.host }}:{{ config.http.port }}"
+export http_proxy="{{ config.http.host | urlparse | get('scheme') | default('http', true) }}://{% if config.http.username | length > 0 %}{{ config.http.username }}:{{ config.http.password }}@{% endif %}{{ config.http.host | regex_replace('^.+://', '') }}:{{ config.http.port }}"
 export HTTP_PROXY="${http_proxy}"
 {%- endif %}
 {%- if config.https.enable | to_bool and config.https.host | length > 0 %}
-export https_proxy="https://{% if config.https.username | length > 0 %}{{ config.https.username }}:{{ config.https.password }}@{% endif %}{{ config.https.host }}:{{ config.https.port }}"
+export https_proxy="{{ config.https.host | urlparse | get('scheme') | default('https', true) }}://{% if config.https.username | length > 0 %}{{ config.https.username }}:{{ config.https.password }}@{% endif %}{{ config.https.host | regex_replace('^.+://', '') }}:{{ config.https.port }}"
 export HTTPS_PROXY="${https_proxy}"
 {%- endif %}
 {%- if config.ftp.enable | to_bool and config.ftp.host | length > 0 %}
-export ftp_proxy="ftp://{% if config.ftp.username | length > 0 %}{{ config.ftp.username }}:{{ config.ftp.password }}@{% endif %}{{ config.ftp.host }}:{{ config.ftp.port }}"
+export ftp_proxy="{{ config.ftp.host | urlparse | get('scheme') | default('ftp', true) }}://{% if config.ftp.username | length > 0 %}{{ config.ftp.username }}:{{ config.ftp.password }}@{% endif %}{{ config.ftp.host | regex_replace('^.+://', '') }}:{{ config.ftp.port }}"
 export ftp_PROXY="${ftp_proxy}"
 {%- endif %}
